// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Map Balloon Animated 1`] = `
.c7 {
  font-family: Lato,sans-serif;
  font-size: 28px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: white;
  text-align: left;
  font-weight: 600;
}

.c9 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: left;
  font-weight: inherit;
}

.c4 {
  background-color: #ffffff;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  width: 100%;
  padding: 16px;
  box-sizing: border-box;
  border-radius: 4px;
  overflow: hidden;
}

.c1 {
  position: absolute;
  top: 400px;
  left: 400px;
  opacity: 1;
}

.c2 {
  font-size: 40px;
  text-align: center;
  width: 40px;
  position: absolute;
  bottom: 0;
  left: -20px;
  color: #f1c618;
  text-shadow: 0 2px 4px rgba(0,0,0,0.24);
}

.c3 {
  -webkit-transition: -webkit-transform 0.3s,opacity 0.3s,color 0.3s;
  -webkit-transition: transform 0.3s,opacity 0.3s,color 0.3s;
  transition: transform 0.3s,opacity 0.3s,color 0.3s;
  position: absolute;
  bottom: 48px;
  left: -33px;
  -webkit-transform-origin: bottom left;
  -ms-transform-origin: bottom left;
  transform-origin: bottom left;
  height: 260px;
  width: 260px;
  padding: 0;
  border-radius: 8px;
  border: none;
  box-shadow: 0 2px 16px 0 rgba(0,0,0,0.16);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3.fade-enter,
.c3.fade-exit-active {
  -webkit-transform: scale(0.5) rotate(5deg);
  -ms-transform: scale(0.5) rotate(5deg);
  transform: scale(0.5) rotate(5deg);
  opacity: 0;
}

.c3.fade-enter-active,
.c3.fade-enter-done {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  opacity: 1;
}

.c3 .wg-small-arrow-right {
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
}

.c3 .caption {
  margin: 16px 8px;
}

.c8 {
  padding-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-image: url(https://picsum.photos/640?image=0);
  background-size: cover;
  background-position: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c6 {
  height: 147px;
  box-sizing: border-box;
  background: linear-gradient( 180deg,rgba(0,0,0,0) 0%,rgba(0,0,0,0.48) 100% );
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding: 24px;
}

.c0 {
  position: relative;
  width: 800px;
  height: 800px;
  background: #ccc url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAFElEQVR4AWMgEthTT+GoQnsiMAMA+G4Eb/fCw1gAAAAASUVORK5CYII=);
}

<div
  className="c0"
>
  <div
    className="c1"
    opacity={1}
    x={400}
    y={400}
  >
    <div
      className="pin wg-location open c2"
    />
    <div
      className="balloon c3 c4"
      overflow="hidden"
      width="100%"
    >
      <div
        className="imageSet c5"
      >
        <div
          className="gradient c6"
        >
          <div
            className="text c7"
            fontWeight="title"
            size={28}
            type="white"
          >
            Romaine Lettuce
          </div>
        </div>
      </div>
      <div
        className="caption c8 c9"
        fontWeight="inherit"
        size={18}
        title={true}
        type="#59636f"
      >
        Paloma Orchards
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Map Balloon Custom opacity 1`] = `
.c7 {
  font-family: Lato,sans-serif;
  font-size: 28px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: white;
  text-align: left;
  font-weight: 600;
}

.c9 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: left;
  font-weight: inherit;
}

.c4 {
  background-color: #ffffff;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  width: 100%;
  padding: 16px;
  box-sizing: border-box;
  border-radius: 4px;
  overflow: hidden;
}

.c1 {
  position: absolute;
  top: 400px;
  left: 400px;
  opacity: 0.5;
}

.c2 {
  font-size: 40px;
  text-align: center;
  width: 40px;
  position: absolute;
  bottom: 0;
  left: -20px;
  color: #f1c618;
  text-shadow: 0 2px 4px rgba(0,0,0,0.24);
}

.c3 {
  position: absolute;
  bottom: 48px;
  left: -33px;
  -webkit-transform-origin: bottom left;
  -ms-transform-origin: bottom left;
  transform-origin: bottom left;
  height: 260px;
  width: 260px;
  padding: 0;
  border-radius: 8px;
  border: none;
  box-shadow: 0 2px 16px 0 rgba(0,0,0,0.16);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3 .caption {
  margin: 16px 8px;
}

.c8 {
  padding-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-image: url(https://picsum.photos/640?image=0);
  background-size: cover;
  background-position: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c6 {
  height: 147px;
  box-sizing: border-box;
  background: linear-gradient( 180deg,rgba(0,0,0,0) 0%,rgba(0,0,0,0.48) 100% );
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding: 24px;
}

.c0 {
  position: relative;
  width: 800px;
  height: 800px;
  background: #ccc url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAFElEQVR4AWMgEthTT+GoQnsiMAMA+G4Eb/fCw1gAAAAASUVORK5CYII=);
}

<div
  className="c0"
>
  <div
    className="c1"
    opacity={0.5}
    x={400}
    y={400}
  >
    <div
      className="pin wg-location open c2"
    />
    <div
      className="balloon c3 c4"
      overflow="hidden"
      width="100%"
    >
      <div
        className="imageSet c5"
      >
        <div
          className="gradient c6"
        >
          <div
            className="text c7"
            fontWeight="title"
            size={28}
            type="white"
          >
            Romaine Lettuce
          </div>
        </div>
      </div>
      <div
        className="caption c8 c9"
        fontWeight="inherit"
        size={18}
        title={true}
        type="#59636f"
      >
        Paloma Orchards
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Map Balloon Custom pin 1`] = `
.c7 {
  font-family: Lato,sans-serif;
  font-size: 28px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: white;
  text-align: left;
  font-weight: 600;
}

.c9 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: left;
  font-weight: inherit;
}

.c4 {
  background-color: #ffffff;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  width: 100%;
  padding: 16px;
  box-sizing: border-box;
  border-radius: 4px;
  overflow: hidden;
}

.c1 {
  position: absolute;
  top: 400px;
  left: 400px;
  opacity: 1;
}

.c2 {
  font-size: 30px;
  text-align: center;
  width: 30px;
  position: absolute;
  bottom: 0;
  left: -15px;
  color: black;
  text-shadow: 0 2px 4px rgba(0,0,0,0.24);
}

.c3 {
  position: absolute;
  bottom: 38px;
  left: -33px;
  -webkit-transform-origin: bottom left;
  -ms-transform-origin: bottom left;
  transform-origin: bottom left;
  height: 260px;
  width: 260px;
  padding: 0;
  border-radius: 8px;
  border: none;
  box-shadow: 0 2px 16px 0 rgba(0,0,0,0.16);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3 .caption {
  margin: 16px 8px;
}

.c8 {
  padding-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-image: url(https://picsum.photos/640?image=0);
  background-size: cover;
  background-position: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c6 {
  height: 147px;
  box-sizing: border-box;
  background: linear-gradient( 180deg,rgba(0,0,0,0) 0%,rgba(0,0,0,0.48) 100% );
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding: 24px;
}

.c0 {
  position: relative;
  width: 800px;
  height: 800px;
  background: #ccc url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAFElEQVR4AWMgEthTT+GoQnsiMAMA+G4Eb/fCw1gAAAAASUVORK5CYII=);
}

<div
  className="c0"
>
  <div
    className="c1"
    opacity={1}
    x={400}
    y={400}
  >
    <div
      className="pin wg-location open c2"
    />
    <div
      className="balloon c3 c4"
      overflow="hidden"
      width="100%"
    >
      <div
        className="imageSet c5"
      >
        <div
          className="gradient c6"
        >
          <div
            className="text c7"
            fontWeight="title"
            size={28}
            type="white"
          >
            Romaine Lettuce
          </div>
        </div>
      </div>
      <div
        className="caption c8 c9"
        fontWeight="inherit"
        size={18}
        title={true}
        type="#59636f"
      >
        Paloma Orchards
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Map Balloon Default 1`] = `
.c1 {
  position: absolute;
  top: 400px;
  left: 400px;
  opacity: 1;
}

.c2 {
  font-size: 40px;
  text-align: center;
  width: 40px;
  position: absolute;
  bottom: 0;
  left: -20px;
  color: #f1c618;
  text-shadow: 0 2px 4px rgba(0,0,0,0.24);
}

.c0 {
  position: relative;
  width: 800px;
  height: 800px;
  background: #ccc url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAFElEQVR4AWMgEthTT+GoQnsiMAMA+G4Eb/fCw1gAAAAASUVORK5CYII=);
}

<div
  className="c0"
>
  <div
    className="c1"
    opacity={1}
    x={400}
    y={400}
  >
    <div
      className="pin wg-location  c2"
    />
  </div>
</div>
`;

exports[`Storyshots Map Balloon Interactive 1`] = `
.c1 {
  position: absolute;
  top: 400px;
  left: 400px;
  opacity: 1;
}

.c2 {
  font-size: 40px;
  text-align: center;
  width: 40px;
  position: absolute;
  bottom: 0;
  left: -20px;
  color: FireBrick;
  text-shadow: 0 2px 4px rgba(0,0,0,0.24);
  font-size: 24px;
  padding: 8px;
  height: 40px;
  box-sizing: border-box;
  cursor: pointer;
  bottom: -20px;
  text-shadow: none;
  color: FireBrick;
  background-color: white;
  border-radius: 50%;
  border: 1px solid rgba(0,0,0,0.16);
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
}

.c2:active {
  -webkit-transform: translateY(2px);
  -ms-transform: translateY(2px);
  transform: translateY(2px);
}

.c2.open {
  color: white;
  background-color: FireBrick;
}

.c0 {
  position: relative;
  width: 800px;
  height: 800px;
  background: #ccc url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAFElEQVR4AWMgEthTT+GoQnsiMAMA+G4Eb/fCw1gAAAAASUVORK5CYII=);
}

<div
  className="c0"
>
  <div
    className="c1"
    opacity={1}
    x={400}
    y={400}
  >
    <div
      className="pin wg-place  c2"
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`Storyshots Map Balloon Interactive open 1`] = `
.c7 {
  font-family: Lato,sans-serif;
  font-size: 28px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: white;
  text-align: left;
  font-weight: 600;
}

.c9 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: left;
  font-weight: inherit;
}

.c10 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: rgba(0,0,0,0.32);
  text-align: left;
  font-weight: 600;
}

.c4 {
  background-color: #ffffff;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  width: 100%;
  padding: 16px;
  box-sizing: border-box;
  border-radius: 4px;
  overflow: hidden;
}

.c1 {
  position: absolute;
  top: 400px;
  left: 400px;
  opacity: 1;
}

.c2 {
  font-size: 40px;
  text-align: center;
  width: 40px;
  position: absolute;
  bottom: 0;
  left: -20px;
  color: FireBrick;
  text-shadow: 0 2px 4px rgba(0,0,0,0.24);
  font-size: 24px;
  padding: 8px;
  height: 40px;
  box-sizing: border-box;
  cursor: pointer;
  bottom: -20px;
  text-shadow: none;
  color: FireBrick;
  background-color: white;
  border-radius: 50%;
  border: 1px solid rgba(0,0,0,0.16);
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
}

.c2:active {
  -webkit-transform: translateY(2px);
  -ms-transform: translateY(2px);
  transform: translateY(2px);
}

.c2.open {
  color: white;
  background-color: FireBrick;
}

.c3 {
  position: absolute;
  bottom: 48px;
  left: -33px;
  -webkit-transform-origin: bottom left;
  -ms-transform-origin: bottom left;
  transform-origin: bottom left;
  height: 260px;
  width: 260px;
  padding: 0;
  border-radius: 8px;
  border: none;
  box-shadow: 0 2px 16px 0 rgba(0,0,0,0.16);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  bottom: 28px;
}

.c3 .caption {
  margin: 16px 8px;
}

.c3 .wg-small-arrow-right {
  color: rgba(0,0,0,0.16);
}

.c3:active {
  -webkit-transform: translateY(2px);
  -ms-transform: translateY(2px);
  transform: translateY(2px);
}

.c3:active .wg-small-arrow-right {
  color: rgba(0,0,0,0.32);
}

.c8 {
  padding-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-image: url(https://picsum.photos/640?image=0);
  background-size: cover;
  background-position: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c6 {
  height: 147px;
  box-sizing: border-box;
  background: linear-gradient( 180deg,rgba(0,0,0,0) 0%,rgba(0,0,0,0.48) 100% );
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding: 24px;
}

.c0 {
  position: relative;
  width: 800px;
  height: 800px;
  background: #ccc url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAFElEQVR4AWMgEthTT+GoQnsiMAMA+G4Eb/fCw1gAAAAASUVORK5CYII=);
}

<div
  className="c0"
>
  <div
    className="c1"
    opacity={1}
    x={400}
    y={400}
  >
    <div
      className="pin wg-place open c2"
      onClick={[Function]}
    />
    <div
      className="balloon c3 c4"
      onClick={[Function]}
      overflow="hidden"
      width="100%"
    >
      <div
        className="imageSet c5"
      >
        <div
          className="gradient c6"
        >
          <div
            className="text c7"
            fontWeight="title"
            size={28}
            type="white"
          >
            Romaine Lettuce
          </div>
        </div>
      </div>
      <div
        className="caption c8 c9"
        fontWeight="inherit"
        size={18}
        title={true}
        type="#59636f"
      >
        Paloma Orchards
        <div
          className="text wg-small-arrow-right c10"
          fontWeight="title"
          size={18}
          type="rgba(0, 0, 0, 0.32)"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Map Balloon Interactive toggle 1`] = `
.c1 {
  position: absolute;
  top: 400px;
  left: 400px;
  opacity: 1;
}

.c2 {
  font-size: 40px;
  text-align: center;
  width: 40px;
  position: absolute;
  bottom: 0;
  left: -20px;
  color: DarkBlue;
  text-shadow: 0 2px 4px rgba(0,0,0,0.24);
  -webkit-transition: -webkit-transform 0.3s,color 0.3s,background-color 0.3s;
  -webkit-transition: transform 0.3s,color 0.3s,background-color 0.3s;
  transition: transform 0.3s,color 0.3s,background-color 0.3s;
  font-size: 24px;
  padding: 8px;
  height: 40px;
  box-sizing: border-box;
  cursor: pointer;
  bottom: -20px;
  text-shadow: none;
  color: DarkBlue;
  background-color: white;
  border-radius: 50%;
  border: 1px solid rgba(0,0,0,0.16);
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
}

.c2:active {
  -webkit-transform: translateY(2px);
  -ms-transform: translateY(2px);
  transform: translateY(2px);
}

.c2.open {
  color: white;
  background-color: DodgerBlue;
}

.c0 {
  position: relative;
  width: 800px;
  height: 800px;
  background: #ccc url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAFElEQVR4AWMgEthTT+GoQnsiMAMA+G4Eb/fCw1gAAAAASUVORK5CYII=);
}

<div
  className="c0"
>
  <div
    className="c1"
    opacity={1}
    x={400}
    y={400}
  >
    <div
      className="pin wg-place  c2"
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`Storyshots Map Balloon Open Balloon 1`] = `
.c7 {
  font-family: Lato,sans-serif;
  font-size: 28px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: white;
  text-align: left;
  font-weight: 600;
}

.c9 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: left;
  font-weight: inherit;
}

.c4 {
  background-color: #ffffff;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  width: 100%;
  padding: 16px;
  box-sizing: border-box;
  border-radius: 4px;
  overflow: hidden;
}

.c1 {
  position: absolute;
  top: 400px;
  left: 400px;
  opacity: 1;
}

.c2 {
  font-size: 40px;
  text-align: center;
  width: 40px;
  position: absolute;
  bottom: 0;
  left: -20px;
  color: #f1c618;
  text-shadow: 0 2px 4px rgba(0,0,0,0.24);
}

.c3 {
  position: absolute;
  bottom: 48px;
  left: -33px;
  -webkit-transform-origin: bottom left;
  -ms-transform-origin: bottom left;
  transform-origin: bottom left;
  height: 260px;
  width: 260px;
  padding: 0;
  border-radius: 8px;
  border: none;
  box-shadow: 0 2px 16px 0 rgba(0,0,0,0.16);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3 .caption {
  margin: 16px 8px;
}

.c8 {
  padding-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-image: url(https://picsum.photos/640?image=0);
  background-size: cover;
  background-position: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c6 {
  height: 147px;
  box-sizing: border-box;
  background: linear-gradient( 180deg,rgba(0,0,0,0) 0%,rgba(0,0,0,0.48) 100% );
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding: 24px;
}

.c0 {
  position: relative;
  width: 800px;
  height: 800px;
  background: #ccc url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAFElEQVR4AWMgEthTT+GoQnsiMAMA+G4Eb/fCw1gAAAAASUVORK5CYII=);
}

<div
  className="c0"
>
  <div
    className="c1"
    opacity={1}
    x={400}
    y={400}
  >
    <div
      className="pin wg-location open c2"
    />
    <div
      className="balloon c3 c4"
      overflow="hidden"
      width="100%"
    >
      <div
        className="imageSet c5"
      >
        <div
          className="gradient c6"
        >
          <div
            className="text c7"
            fontWeight="title"
            size={28}
            type="white"
          >
            Romaine Lettuce
          </div>
        </div>
      </div>
      <div
        className="caption c8 c9"
        fontWeight="inherit"
        size={18}
        title={true}
        type="#59636f"
      >
        Paloma Orchards
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Map Balloon Open Balloon at Right 1`] = `
.c7 {
  font-family: Lato,sans-serif;
  font-size: 28px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: white;
  text-align: left;
  font-weight: 600;
}

.c9 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: left;
  font-weight: inherit;
}

.c4 {
  background-color: #ffffff;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  width: 100%;
  padding: 16px;
  box-sizing: border-box;
  border-radius: 4px;
  overflow: hidden;
}

.c1 {
  position: absolute;
  top: 400px;
  left: 400px;
  opacity: 1;
}

.c2 {
  font-size: 40px;
  text-align: center;
  width: 40px;
  position: absolute;
  bottom: 0;
  left: -20px;
  color: #f1c618;
  text-shadow: 0 2px 4px rgba(0,0,0,0.24);
}

.c3 {
  position: absolute;
  bottom: 48px;
  -webkit-transform-origin: bottom right;
  -ms-transform-origin: bottom right;
  transform-origin: bottom right;
  right: -33px;
  height: 260px;
  width: 260px;
  padding: 0;
  border-radius: 8px;
  border: none;
  box-shadow: 0 2px 16px 0 rgba(0,0,0,0.16);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3 .caption {
  margin: 16px 8px;
}

.c8 {
  padding-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-image: url(https://picsum.photos/640?image=0);
  background-size: cover;
  background-position: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c6 {
  height: 147px;
  box-sizing: border-box;
  background: linear-gradient( 180deg,rgba(0,0,0,0) 0%,rgba(0,0,0,0.48) 100% );
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding: 24px;
}

.c0 {
  position: relative;
  width: 800px;
  height: 800px;
  background: #ccc url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAFElEQVR4AWMgEthTT+GoQnsiMAMA+G4Eb/fCw1gAAAAASUVORK5CYII=);
}

<div
  className="c0"
>
  <div
    className="c1"
    opacity={1}
    x={400}
    y={400}
  >
    <div
      className="pin wg-location open c2"
    />
    <div
      className="balloon c3 c4"
      overflow="hidden"
      width="100%"
    >
      <div
        className="imageSet c5"
      >
        <div
          className="gradient c6"
        >
          <div
            className="text c7"
            fontWeight="title"
            size={28}
            type="white"
          >
            Romaine Lettuce
          </div>
        </div>
      </div>
      <div
        className="caption c8 c9"
        fontWeight="inherit"
        size={18}
        title={true}
        type="#59636f"
      >
        Paloma Orchards
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Map Balloon Single Image 1`] = `
.c4 {
  box-sizing: border-box;
  border-radius: 8px;
  object-fit: cover;
}

.c1 {
  position: absolute;
  top: 400px;
  left: 400px;
  opacity: 1;
}

.c3 {
  background-color: white;
  position: absolute;
  bottom: 16px;
  left: -92px;
  border-radius: 8px;
  box-shadow: 0 2px 16px 0 rgba(0,0,0,0.16);
}

.c2 {
  width: 16px;
  height: 16px;
  border: 1px solid rgba(0,0,0,0.16);
  border-radius: 50%;
  position: absolute;
  bottom: -8px;
  left: -8px;
  background-color: #f1c618;
}

.c0 {
  position: relative;
  width: 800px;
  height: 800px;
  background: #ccc url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAFElEQVR4AWMgEthTT+GoQnsiMAMA+G4Eb/fCw1gAAAAASUVORK5CYII=);
}

<div
  className="c0"
>
  <div
    className="c1"
    opacity={1}
    x={400}
    y={400}
  >
    <div>
      <div
        className="image single c2"
        src="https://picsum.photos/180?image=0"
      />
      <img
        alt=""
        className="image single c3 c4"
        height={184}
        size={184}
        src="https://picsum.photos/180?image=0"
        width={184}
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Map Balloon custom border radius 1`] = `
.c4 {
  box-sizing: border-box;
  border-radius: 50%;
  object-fit: cover;
}

.c1 {
  position: absolute;
  top: 400px;
  left: 400px;
  opacity: 1;
}

.c3 {
  background-color: white;
  position: absolute;
  bottom: 16px;
  left: -92px;
  border-radius: 50%;
  box-shadow: 0 2px 16px 0 rgba(0,0,0,0.16);
}

.c2 {
  width: 16px;
  height: 16px;
  border: 1px solid rgba(0,0,0,0.16);
  border-radius: 50%;
  position: absolute;
  bottom: -8px;
  left: -8px;
  background-color: #f1c618;
}

.c0 {
  position: relative;
  width: 800px;
  height: 800px;
  background: #ccc url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAFElEQVR4AWMgEthTT+GoQnsiMAMA+G4Eb/fCw1gAAAAASUVORK5CYII=);
}

<div
  className="c0"
>
  <div
    className="c1"
    opacity={1}
    x={400}
    y={400}
  >
    <div>
      <div
        className="image single c2"
        src="https://picsum.photos/180?image=0"
      />
      <img
        alt=""
        className="image single c3 c4"
        height={184}
        size={184}
        src="https://picsum.photos/180?image=0"
        width={184}
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Map Balloon custom sizes 1`] = `
.c7 {
  font-family: Lato,sans-serif;
  font-size: 30px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: white;
  text-align: left;
  font-weight: 600;
}

.c9 {
  font-family: Lato,sans-serif;
  font-size: 30px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: left;
  font-weight: inherit;
}

.c4 {
  background-color: #ffffff;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  width: 100%;
  padding: 16px;
  box-sizing: border-box;
  border-radius: 4px;
  overflow: hidden;
}

.c1 {
  position: absolute;
  top: 400px;
  left: 400px;
  opacity: 1;
}

.c2 {
  font-size: 40px;
  text-align: center;
  width: 40px;
  position: absolute;
  bottom: 0;
  left: -20px;
  color: #f1c618;
  text-shadow: 0 2px 4px rgba(0,0,0,0.24);
}

.c3 {
  position: absolute;
  bottom: 48px;
  left: -33px;
  -webkit-transform-origin: bottom left;
  -ms-transform-origin: bottom left;
  transform-origin: bottom left;
  height: 350px;
  width: 350px;
  padding: 0;
  border-radius: 8px;
  border: none;
  box-shadow: 0 2px 16px 0 rgba(0,0,0,0.16);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3 .caption {
  margin: 16px 8px;
}

.c8 {
  padding-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-image: url(https://picsum.photos/640?image=0);
  background-size: cover;
  background-position: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c6 {
  height: 147px;
  box-sizing: border-box;
  background: linear-gradient( 180deg,rgba(0,0,0,0) 0%,rgba(0,0,0,0.48) 100% );
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding: 24px;
}

.c0 {
  position: relative;
  width: 800px;
  height: 800px;
  background: #ccc url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAFElEQVR4AWMgEthTT+GoQnsiMAMA+G4Eb/fCw1gAAAAASUVORK5CYII=);
}

<div
  className="c0"
>
  <div
    className="c1"
    opacity={1}
    x={400}
    y={400}
  >
    <div
      className="pin wg-location open c2"
    />
    <div
      className="balloon c3 c4"
      overflow="hidden"
      width="100%"
    >
      <div
        className="imageSet c5"
      >
        <div
          className="gradient c6"
        >
          <div
            className="text c7"
            fontWeight="title"
            size={30}
            type="white"
          >
            Romaine Lettuce
          </div>
        </div>
      </div>
      <div
        className="caption c8 c9"
        fontWeight="inherit"
        size={30}
        title={true}
        type="#59636f"
      >
        Paloma Orchards
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Map Balloon extended style 1`] = `
.c8 {
  font-family: Lato,sans-serif;
  font-size: 28px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: white;
  text-align: left;
  font-weight: 600;
}

.c10 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: left;
  font-weight: inherit;
}

.c5 {
  background-color: #ffffff;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  width: 100%;
  padding: 16px;
  box-sizing: border-box;
  border-radius: 4px;
  overflow: hidden;
}

.c2 {
  position: absolute;
  top: 400px;
  left: 400px;
  opacity: 1;
}

.c3 {
  font-size: 40px;
  text-align: center;
  width: 40px;
  position: absolute;
  bottom: 0;
  left: -20px;
  color: #f1c618;
  text-shadow: 0 2px 4px rgba(0,0,0,0.24);
}

.c4 {
  position: absolute;
  bottom: 48px;
  left: -33px;
  -webkit-transform-origin: bottom left;
  -ms-transform-origin: bottom left;
  transform-origin: bottom left;
  height: 260px;
  width: 260px;
  padding: 0;
  border-radius: 8px;
  border: none;
  box-shadow: 0 2px 16px 0 rgba(0,0,0,0.16);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c4 .caption {
  margin: 16px 8px;
}

.c9 {
  padding-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-image: url(https://picsum.photos/640?image=0);
  background-size: cover;
  background-position: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c7 {
  height: 147px;
  box-sizing: border-box;
  background: linear-gradient( 180deg,rgba(0,0,0,0) 0%,rgba(0,0,0,0.48) 100% );
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding: 24px;
}

.c0 {
  position: relative;
  width: 800px;
  height: 800px;
  background: #ccc url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAFElEQVR4AWMgEthTT+GoQnsiMAMA+G4Eb/fCw1gAAAAASUVORK5CYII=);
}

.c1 .pin {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c1 .caption {
  border: solid 1px burlywood;
}

.c1 .imageSet .gradient {
  background: linear-gradient( 180deg,rgba(0,255,0,0.2) 0%,rgba(255,0,200,0.48) 100% );
}

.c1 .imageSet .text {
  color: lime;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
    opacity={1}
    x={400}
    y={400}
  >
    <div
      className="pin wg-location open c3"
    />
    <div
      className="balloon c4 c5"
      overflow="hidden"
      width="100%"
    >
      <div
        className="imageSet c6"
      >
        <div
          className="gradient c7"
        >
          <div
            className="text c8"
            fontWeight="title"
            size={28}
            type="white"
          >
            Romaine Lettuce
          </div>
        </div>
      </div>
      <div
        className="caption c9 c10"
        fontWeight="inherit"
        size={18}
        title={true}
        type="#59636f"
      >
        Paloma Orchards
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Map Balloon imageSet without name 1`] = `
.c7 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: left;
  font-weight: inherit;
}

.c4 {
  background-color: #ffffff;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  width: 100%;
  padding: 16px;
  box-sizing: border-box;
  border-radius: 4px;
  overflow: hidden;
}

.c1 {
  position: absolute;
  top: 400px;
  left: 400px;
  opacity: 1;
}

.c2 {
  font-size: 40px;
  text-align: center;
  width: 40px;
  position: absolute;
  bottom: 0;
  left: -20px;
  color: #f1c618;
  text-shadow: 0 2px 4px rgba(0,0,0,0.24);
}

.c3 {
  position: absolute;
  bottom: 48px;
  left: -33px;
  -webkit-transform-origin: bottom left;
  -ms-transform-origin: bottom left;
  transform-origin: bottom left;
  height: 260px;
  width: 260px;
  padding: 0;
  border-radius: 8px;
  border: none;
  box-shadow: 0 2px 16px 0 rgba(0,0,0,0.16);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3 .caption {
  margin: 16px 8px;
}

.c6 {
  padding-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-image: url(https://picsum.photos/640?image=0);
  background-size: cover;
  background-position: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c0 {
  position: relative;
  width: 800px;
  height: 800px;
  background: #ccc url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAFElEQVR4AWMgEthTT+GoQnsiMAMA+G4Eb/fCw1gAAAAASUVORK5CYII=);
}

<div
  className="c0"
>
  <div
    className="c1"
    opacity={1}
    x={400}
    y={400}
  >
    <div
      className="pin wg-location open c2"
    />
    <div
      className="balloon c3 c4"
      overflow="hidden"
      width="100%"
    >
      <div
        className="imageSet c5"
      />
      <div
        className="caption c6 c7"
        fontWeight="inherit"
        size={18}
        title={true}
        type="#59636f"
      >
        Paloma Orchards
      </div>
    </div>
  </div>
</div>
`;
